objects/SVMXC__Service_Contract_Services__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_ConsumableDiscountCovered__c</fullName>
        <label>Consumable Discount Covered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitledQtyRemaining__c</fullName>
        <label>Entitled Qty Remaining</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitledQty__c</fullName>
        <label>Entitled Qty</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitlementCondition__c</fullName>
        <label>Entitlement Condition(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitlementTypeName__c</fullName>
        <label>Entitlement Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitlementType__c</fullName>
        <label>Entitlement Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Entitlement Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServicePartsDiscountCovered__c</fullName>
        <label>Service Parts Discount Covered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Coverage__c</fullName>
        <description>Total Coverage defined as a sum of the &quot;Discount Covered&quot; fields. Used for Auto-Entitlement logic.
NOTE: Because Consumable Discount Covered is defined as a Number, not Percent, special math is needed.</description>
        <formula>(SMAX_PS_ConsumableDiscountCovered__c/100)
+ SVMXC__Expense_Discount_Covered__c
+ SVMXC__Labor_Discount_Covered__c
+ SVMXC__Parts_Discount_Covered__c
+ SMAX_PS_ServicePartsDiscountCovered__c
+ SVMXC__Travel_Discount_Covered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Coverage defined as a sum of the &quot;Discount Covered&quot; fields. Used for Auto-Entitlement logic.</inlineHelpText>
        <label>Total Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>